# a

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_REVIEW.md  COVERAGE_PLAN.md  COVERAGE_PLAN_98.md  Cargo.toml  README.md  RESOLUTION_PLAN.md  config.json  coverage-report.txt  coverage-summary.json
.claude/: settings.local.json
.github/workflows/: ci-release.yml
scripts/: tag-release.bat
src/: main.rs
tests/: cli_smoke.rs
wrk_docs/: 2025.10.30 - CR - Coverage Improvement Plan.md  2025.10.30 - CR - Coverage Review.md  2025.11.11 - CC - Coverage Analysis Report.md  2025.11.11 - CC - Coverage Improvement Plan.md  2025.11.11 - CC - Final Summary.md  2026.01.05 - CC - coverage report final.md  2026.01.05 - CC - coverage report.md  2026.03.13 - HLD - Saved Exit Codes in Chain Commands - V2.md  2026.03.13 - HLD - Saved Exit Codes in Chain Commands - V3.md  2026.03.13 - HLD - Saved Exit Codes in Chain Commands.md
wrk_journals/: 2026.03.14 - JRN - Saved Exit Codes Implementation.md
