[package]
name = "a"
version = "1.4.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
ureq = { version = "2.10", features = ["json"] }
base64 = "0.21"

[dev-dependencies]
tempfile = "3.8"
