[package]
name = "a"
version = "1.5.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ureq = { version = "2.10", features = ["json"] }
base64 = "0.21"
shell-words = "1.1"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"
